--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
      "text": [
       ">> Local Products Rules ..... started\n",
       ">> Local Products Rules ..... done\n",
-      ">> Building CMSSW version CMSSW_10_2_15 ----\n",
+      ">> Building CMSSW version CMSSW_10_6_6 ----\n",
       "------- copying files from src/Analysis/JMEDAS/scripts -------\n",
       ">> copied plots11.py\n",
       ">> copied jmehats_DBReader.py\n",
@@ -34,9 +34,9 @@
       ">> copied plots9.py\n",
       ">> copied JEC.ipynb\n",
       ">> copied plots_pileup_1.py\n",
-      ">> Entering Package Analysis/JetToolbox\n",
       ">> copied jmedas_dijet.py\n",
       ">> copied jmehats_JEC_makeNtuples.py\n",
+      ">> Entering Package Analysis/JetToolbox\n",
       ">> copied plots1b.py\n",
       ">> copied ntuple.ipynb\n",
       ">> copied plots_jec_1.py\n",
@@ -47,11 +47,12 @@
       ">> copied plots8.py\n",
       ">> copied run_JetMiniValidation.py\n",
       ">> copied plots_jer_1.py\n",
-      "Entering library rule at Analysis/JMEDAS\n",
       ">> copied rootlogon.C\n",
       ">> copied compareEfficiencies.C\n",
       ">> copied compare2DQuantities.C\n",
+      "Entering library rule at src/Analysis/JetToolbox/plugins\n",
       ">> copied JetCorrectionDBReader_Data_cfg.py\n",
+      "Entering library rule at Analysis/JMEDAS\n",
       ">> copied plots4a.py\n",
       ">> copied plot_hists.C\n",
       ">> copied jmedas_fwlite.py\n",
@@ -79,57 +80,55 @@
       ">> copied plots2.py\n",
       ">> copied jmedas_make_histograms.py\n",
       ">> copied JetCorrectionsOnTheFlyExample.py\n",
-      ">> Building LCG reflex dict from header file src/Analysis/JMEDAS/src/classes.h\n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/src/JetUncertaintyProducer.cc \n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/src/jmedas_pileupNtuple.C \n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/src/jmehats_ntuple.C \n",
-      "Entering library rule at src/Analysis/JetToolbox/plugins\n",
+      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/JetUncertaintyProducer.cc \n",
+      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/jmedas_pileupNtuple.C \n",
+      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/jmehats_ntuple.C \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JetToolbox/plugins/JetTester.cc \n",
       "Entering library rule at src/Analysis/JMEDAS/plugins\n",
-      ">> Compiling LCG dictionary: tmp/slc7_amd64_gcc700/src/Analysis/JMEDAS/src/AnalysisJMEDAS/a/AnalysisJMEDAS_xr.cc\n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JetToolbox/plugins/JetTester.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/EtaPtMinCandViewRefSelector.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/convertPackedCandToRecoCand.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/JetMiniValidation.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/JetCorrectionsOnTheFly.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/jmehats_treeMaker.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/JetPlotsExample.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/JetTester.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_2_15/src/Analysis/JMEDAS/plugins/jmedas_pileupTreeMaker.cc \n",
-      ">> Building shared library tmp/slc7_amd64_gcc700/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so\n",
-      "Copying tmp/slc7_amd64_gcc700/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so to productstore area:\n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/EtaPtMinCandViewRefSelector.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/convertPackedCandToRecoCand.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetMiniValidation.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetCorrectionsOnTheFly.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/jmehats_treeMaker.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetPlotsExample.cc \n",
+      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/jmedas_pileupTreeMaker.cc \n",
+      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JetToolbox/plugins/AnalysisJetToolboxAuto/libAnalysisJetToolboxAuto.so\n",
+      ">> Building LCG reflex dict from header file src/Analysis/JMEDAS/src/classes.h\n",
+      ">> Compiling LCG dictionary: tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/a/AnalysisJMEDAS_xr.cc\n",
+      ">> Building shared library tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so\n",
+      "Leaving library rule at src/Analysis/JetToolbox/plugins\n",
+      "@@@@ Running edmWriteConfigs for AnalysisJetToolboxAuto\n",
+      "Copying tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so to productstore area:\n",
       ">> Checking EDM Class Version for src/Analysis/JMEDAS/src/classes_def.xml in libAnalysisJMEDAS.so\n",
+      "--- Registered EDM Plugin: AnalysisJetToolboxAuto\n",
+      ">> Leaving Package Analysis/JetToolbox\n",
+      ">> Package Analysis/JetToolbox built\n",
       "@@@@ ----> OK  EDM Class Version \n",
       ">> Checking EDM Class Transients in libAnalysisJMEDAS.so\n",
       "@@@@ ----> OK  EDM Class Transients \n",
       "Leaving library rule at Analysis/JMEDAS\n",
-      ">> Building edm plugin tmp/slc7_amd64_gcc700/src/Analysis/JMEDAS/plugins/AnalysisJMEDASAuto/libAnalysisJMEDASAuto.so\n",
+      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/plugins/AnalysisJMEDASAuto/libAnalysisJMEDASAuto.so\n",
       "Leaving library rule at src/Analysis/JMEDAS/plugins\n",
       "@@@@ Running edmWriteConfigs for AnalysisJMEDASAuto\n",
       "--- Registered EDM Plugin: AnalysisJMEDASAuto\n",
       ">> Leaving Package Analysis/JMEDAS\n",
       ">> Package Analysis/JMEDAS built\n",
-      ">> Building edm plugin tmp/slc7_amd64_gcc700/src/Analysis/JetToolbox/plugins/AnalysisJetToolboxAuto/libAnalysisJetToolboxAuto.so\n",
-      "Leaving library rule at src/Analysis/JetToolbox/plugins\n",
-      "@@@@ Running edmWriteConfigs for AnalysisJetToolboxAuto\n",
-      "--- Registered EDM Plugin: AnalysisJetToolboxAuto\n",
-      ">> Leaving Package Analysis/JetToolbox\n",
-      ">> Package Analysis/JetToolbox built\n",
       ">> Subsystem Analysis built\n",
-      "gmake[1]: Entering directory '/home/cms.pedrok/CMSSW_10_2_15'\n",
+      "gmake[1]: Entering directory '/home/cms.pedrok/CMSSW_10_6_6'\n",
       ">> Local Products Rules ..... started\n",
       ">> Local Products Rules ..... done\n",
       "@@@@ Refreshing Plugins:edmPluginRefresh\n",
       ">> Creating project symlinks\n",
       ">> Done python_symlink\n",
-      ">> Compiling python modules cfipython/slc7_amd64_gcc700\n",
+      ">> Compiling python modules cfipython/slc7_amd64_gcc820\n",
       ">> Compiling python modules python\n",
       ">> Compiling python modules src/Analysis/JMEDAS/python\n",
       ">> Compiling python modules src/Analysis/JetToolbox/python\n",
       ">> Done generating edm plugin poisoned information\n",
-      ">> Plugins of all types refreshed.\n",
       ">> All python modules compiled\n",
-      "gmake[1]: Leaving directory '/home/cms.pedrok/CMSSW_10_2_15'\n",
-      "Loaded CMSSW_10_2_15 into hats-jec!\n"
+      ">> Plugins of all types refreshed.\n",
+      "gmake[1]: Leaving directory '/home/cms.pedrok/CMSSW_10_6_6'\n",
+      "Loaded CMSSW_10_6_6 into hats-jec!\n"
      ]
     },
     {
@@ -138,107 +137,91 @@
      "text": [
       "WARNING: In non-interactive mode release checks e.g. deprecated releases, production architectures are disabled.\n",
       "Cloning into 'Analysis/JMEDAS'...\n",
-      "Checking out files:   8% (126/1406)   \r",
-      "Checking out files:   9% (127/1406)   \r",
-      "Checking out files:  10% (141/1406)   \r",
-      "Checking out files:  11% (155/1406)   \r",
-      "Checking out files:  12% (169/1406)   \r",
-      "Checking out files:  13% (183/1406)   \r",
-      "Checking out files:  14% (197/1406)   \r",
-      "Checking out files:  15% (211/1406)   \r",
-      "Checking out files:  16% (225/1406)   \r",
-      "Checking out files:  17% (240/1406)   \r",
-      "Checking out files:  18% (254/1406)   \r",
-      "Checking out files:  19% (268/1406)   \r",
-      "Checking out files:  20% (282/1406)   \r",
-      "Checking out files:  21% (296/1406)   \r",
-      "Checking out files:  22% (310/1406)   \r",
-      "Checking out files:  23% (324/1406)   \r",
-      "Checking out files:  24% (338/1406)   \r",
-      "Checking out files:  25% (352/1406)   \r",
-      "Checking out files:  25% (365/1406)   \r",
-      "Checking out files:  26% (366/1406)   \r",
-      "Checking out files:  27% (380/1406)   \r",
-      "Checking out files:  28% (394/1406)   \r",
-      "Checking out files:  29% (408/1406)   \r",
-      "Checking out files:  30% (422/1406)   \r",
-      "Checking out files:  31% (436/1406)   \r",
-      "Checking out files:  32% (450/1406)   \r",
-      "Checking out files:  33% (464/1406)   \r",
-      "Checking out files:  34% (479/1406)   \r",
-      "Checking out files:  35% (493/1406)   \r",
-      "Checking out files:  36% (507/1406)   \r",
-      "Checking out files:  37% (521/1406)   \r",
-      "Checking out files:  38% (535/1406)   \r",
-      "Checking out files:  39% (549/1406)   \r",
-      "Checking out files:  40% (563/1406)   \r",
-      "Checking out files:  41% (577/1406)   \r",
-      "Checking out files:  41% (586/1406)   \r",
-      "Checking out files:  42% (591/1406)   \r",
-      "Checking out files:  43% (605/1406)   \r",
-      "Checking out files:  44% (619/1406)   \r",
-      "Checking out files:  45% (633/1406)   \r",
-      "Checking out files:  46% (647/1406)   \r",
-      "Checking out files:  47% (661/1406)   \r",
-      "Checking out files:  48% (675/1406)   \r",
-      "Checking out files:  49% (689/1406)   \r",
-      "Checking out files:  50% (703/1406)   \r",
-      "Checking out files:  50% (709/1406)   \r",
-      "Checking out files:  51% (718/1406)   \r",
-      "Checking out files:  52% (732/1406)   \r",
-      "Checking out files:  53% (746/1406)   \r",
-      "Checking out files:  54% (760/1406)   \r",
-      "Checking out files:  55% (774/1406)   \r",
-      "Checking out files:  56% (788/1406)   \r",
-      "Checking out files:  56% (790/1406)   \r",
-      "Checking out files:  57% (802/1406)   \r",
-      "Checking out files:  58% (816/1406)   \r",
-      "Checking out files:  59% (830/1406)   \r",
-      "Checking out files:  60% (844/1406)   \r",
-      "Checking out files:  61% (858/1406)   \r",
-      "Checking out files:  62% (872/1406)   \r",
-      "Checking out files:  63% (886/1406)   \r",
-      "Checking out files:  64% (900/1406)   \r",
-      "Checking out files:  64% (912/1406)   \r",
-      "Checking out files:  65% (914/1406)   \r",
-      "Checking out files:  66% (928/1406)   \r",
-      "Checking out files:  67% (943/1406)   \r",
-      "Checking out files:  68% (957/1406)   \r",
-      "Checking out files:  69% (971/1406)   \r",
-      "Checking out files:  70% (985/1406)   \r",
-      "Checking out files:  71% (999/1406)   \r",
-      "Checking out files:  72% (1013/1406)   \r",
-      "Checking out files:  73% (1027/1406)   \r",
-      "Checking out files:  74% (1041/1406)   \r",
-      "Checking out files:  75% (1055/1406)   \r",
-      "Checking out files:  76% (1069/1406)   \r",
-      "Checking out files:  77% (1083/1406)   \r",
-      "Checking out files:  78% (1097/1406)   \r",
-      "Checking out files:  79% (1111/1406)   \r",
-      "Checking out files:  80% (1125/1406)   \r",
-      "Checking out files:  81% (1139/1406)   \r",
-      "Checking out files:  82% (1153/1406)   \r",
-      "Checking out files:  83% (1167/1406)   \r",
-      "Checking out files:  84% (1182/1406)   \r",
-      "Checking out files:  85% (1196/1406)   \r",
-      "Checking out files:  86% (1210/1406)   \r",
-      "Checking out files:  86% (1212/1406)   \r",
-      "Checking out files:  87% (1224/1406)   \r",
-      "Checking out files:  88% (1238/1406)   \r",
-      "Checking out files:  89% (1252/1406)   \r",
-      "Checking out files:  90% (1266/1406)   \r",
-      "Checking out files:  91% (1280/1406)   \r",
-      "Checking out files:  92% (1294/1406)   \r",
-      "Checking out files:  93% (1308/1406)   \r",
-      "Checking out files:  94% (1322/1406)   \r",
-      "Checking out files:  95% (1336/1406)   \r",
-      "Checking out files:  96% (1350/1406)   \r",
-      "Checking out files:  97% (1364/1406)   \r",
-      "Checking out files:  98% (1378/1406)   \r",
-      "Checking out files:  99% (1392/1406)   \r",
-      "Checking out files:  99% (1393/1406)   \r",
-      "Checking out files: 100% (1406/1406)   \r",
-      "Checking out files: 100% (1406/1406), done.\n",
+      "Checking out files:  19% (280/1472)   \r",
+      "Checking out files:  20% (295/1472)   \r",
+      "Checking out files:  21% (310/1472)   \r",
+      "Checking out files:  22% (324/1472)   \r",
+      "Checking out files:  23% (339/1472)   \r",
+      "Checking out files:  24% (354/1472)   \r",
+      "Checking out files:  25% (368/1472)   \r",
+      "Checking out files:  26% (383/1472)   \r",
+      "Checking out files:  27% (398/1472)   \r",
+      "Checking out files:  28% (413/1472)   \r",
+      "Checking out files:  29% (427/1472)   \r",
+      "Checking out files:  30% (442/1472)   \r",
+      "Checking out files:  31% (457/1472)   \r",
+      "Checking out files:  32% (472/1472)   \r",
+      "Checking out files:  33% (486/1472)   \r",
+      "Checking out files:  34% (501/1472)   \r",
+      "Checking out files:  35% (516/1472)   \r",
+      "Checking out files:  36% (530/1472)   \r",
+      "Checking out files:  37% (545/1472)   \r",
+      "Checking out files:  38% (560/1472)   \r",
+      "Checking out files:  39% (575/1472)   \r",
+      "Checking out files:  40% (589/1472)   \r",
+      "Checking out files:  41% (604/1472)   \r",
+      "Checking out files:  42% (619/1472)   \r",
+      "Checking out files:  43% (633/1472)   \r",
+      "Checking out files:  44% (648/1472)   \r",
+      "Checking out files:  45% (663/1472)   \r",
+      "Checking out files:  46% (678/1472)   \r",
+      "Checking out files:  47% (692/1472)   \r",
+      "Checking out files:  48% (707/1472)   \r",
+      "Checking out files:  49% (722/1472)   \r",
+      "Checking out files:  50% (736/1472)   \r",
+      "Checking out files:  51% (751/1472)   \r",
+      "Checking out files:  52% (766/1472)   \r",
+      "Checking out files:  53% (781/1472)   \r",
+      "Checking out files:  54% (795/1472)   \r",
+      "Checking out files:  55% (810/1472)   \r",
+      "Checking out files:  56% (825/1472)   \r",
+      "Checking out files:  57% (840/1472)   \r",
+      "Checking out files:  58% (854/1472)   \r",
+      "Checking out files:  59% (869/1472)   \r",
+      "Checking out files:  60% (884/1472)   \r",
+      "Checking out files:  60% (890/1472)   \r",
+      "Checking out files:  61% (898/1472)   \r",
+      "Checking out files:  62% (913/1472)   \r",
+      "Checking out files:  63% (928/1472)   \r",
+      "Checking out files:  64% (943/1472)   \r",
+      "Checking out files:  65% (957/1472)   \r",
+      "Checking out files:  66% (972/1472)   \r",
+      "Checking out files:  67% (987/1472)   \r",
+      "Checking out files:  68% (1001/1472)   \r",
+      "Checking out files:  69% (1016/1472)   \r",
+      "Checking out files:  70% (1031/1472)   \r",
+      "Checking out files:  71% (1046/1472)   \r",
+      "Checking out files:  72% (1060/1472)   \r",
+      "Checking out files:  73% (1075/1472)   \r",
+      "Checking out files:  74% (1090/1472)   \r",
+      "Checking out files:  75% (1104/1472)   \r",
+      "Checking out files:  76% (1119/1472)   \r",
+      "Checking out files:  77% (1134/1472)   \r",
+      "Checking out files:  78% (1149/1472)   \r",
+      "Checking out files:  79% (1163/1472)   \r",
+      "Checking out files:  80% (1178/1472)   \r",
+      "Checking out files:  81% (1193/1472)   \r",
+      "Checking out files:  81% (1200/1472)   \r",
+      "Checking out files:  82% (1208/1472)   \r",
+      "Checking out files:  83% (1222/1472)   \r",
+      "Checking out files:  84% (1237/1472)   \r",
+      "Checking out files:  85% (1252/1472)   \r",
+      "Checking out files:  86% (1266/1472)   \r",
+      "Checking out files:  87% (1281/1472)   \r",
+      "Checking out files:  88% (1296/1472)   \r",
+      "Checking out files:  89% (1311/1472)   \r",
+      "Checking out files:  90% (1325/1472)   \r",
+      "Checking out files:  91% (1340/1472)   \r",
+      "Checking out files:  92% (1355/1472)   \r",
+      "Checking out files:  93% (1369/1472)   \r",
+      "Checking out files:  94% (1384/1472)   \r",
+      "Checking out files:  95% (1399/1472)   \r",
+      "Checking out files:  96% (1414/1472)   \r",
+      "Checking out files:  97% (1428/1472)   \r",
+      "Checking out files:  98% (1443/1472)   \r",
+      "Checking out files:  99% (1458/1472)   \r",
+      "Checking out files: 100% (1472/1472)   \r",
+      "Checking out files: 100% (1472/1472), done.\n",
       "Cloning into 'Analysis/JetToolbox'...\n"
      ]
     }
@@ -247,7 +230,7 @@
     "%%bash\n",
     "#!/bin/bash\n",
     "\n",
-    "CMSSW_VER=\"CMSSW_10_2_15\"\n",
+    "CMSSW_VER=\"CMSSW_10_6_6\"\n",
     "KERNEL_NAME=\"hats-jec\"\n",
     "\n",
     "set -e\n",
@@ -263,7 +246,7 @@
     "\n",
     "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
-    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2019\n",
+    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b DAS2020\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X\n",
     "scram b -j 4\n",
     "cd ..\n",
@@ -310,11 +293,8 @@
     "If successful, you should see something similar to the following:\n",
     "\n",
     "```\n",
-    "Collecting ipython\n",
     "<snip>\n",
-    "Successfully installed decorator-4.3.0 ipython-5.7.0 pathlib2-2.3.2 pexpect-4.5.0 pip-10.0.1 prompt-toolkit-1.0.15 ptyprocess-0.5.2 scandir-1.7 setuptools-39.2.0 six-1.11.0\n",
-    "Installed kernelspec hats-sci-py in /home/meloam/.local/share/jupyter/kernels/hats-sci-py\n",
-    "Loaded CMSSW_9_4_12 into hats-jec!\n",
+    "Loaded CMSSW_10_6_6 into hats-jec!\n",
     "```\n",
     "\n",
     "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults."
