use hats-jec kernel by default in all notebooks

--- a/notebooks/Exercise 2 - Jet Types and Algorithms.ipynb
+++ b/notebooks/Exercise 2 - Jet Types and Algorithms.ipynb
@@ -403,9 +403,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
