--- a/notebooks/Exercise 3 - Jet Energy Corrections.ipynb
+++ b/notebooks/Exercise 3 - Jet Energy Corrections.ipynb
@@ -318,9 +318,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
