--- a/notebooks/Exercise 6 - W and Top Tagging.ipynb
+++ b/notebooks/Exercise 6 - W and Top Tagging.ipynb
@@ -340,9 +340,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
@@ -354,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
