--- a/notebooks/Exercise 7 - ROC Curves.ipynb
+++ b/notebooks/Exercise 7 - ROC Curves.ipynb
@@ -106,9 +106,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
@@ -120,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
