--- a/notebooks/HATS_BONUS_2 - Pileup.ipynb
+++ b/notebooks/HATS_BONUS_2 - Pileup.ipynb
@@ -198,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
