Suggest to add AK8 distributions to the same canvas.

--- a/notebooks/Exercise 1 - Basics.ipynb
+++ b/notebooks/Exercise 1 - Basics.ipynb
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your histograms from step 4 above should look similar to the four plots shown below."
+    "Your histograms from step 4 above should look similar to the four plots shown below. What about AK8 jets? Add the corresponding histograms to the same canvases, they are already filled and available (draw option 'same', line color 'ROOT.kRed'). "
    ]
   },
   {
