point to HATS2020 branch

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
-    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b DAS2020\n",
+    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2020\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X\n",
     "scram b -j 4\n",
     "cd ..\n",
