make ntuple production work again (at least straight from miniAOD)

--- a/notebooks/HATS_BONUS_3 - JECNtuple Setup.ipynb
+++ b/notebooks/HATS_BONUS_3 - JECNtuple Setup.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "```python\n",
     "#! /usr/bin/env python\n",
-    "import subprocess, shlex, sys\n",
+    "import subprocess, shlex, sys, os\n",
     "\n",
     "def get_commands():\n",
     "    command_dict = {\n",
@@ -32,6 +32,7 @@
     "    return command_dict\n",
     "\n",
     "def main(debug = False):\n",
+    "    os.system(\"eval `scramv1 runtime -sh`\")\n",
     "    sys.path.append(os.path.expandvars(\"$CMSSW_BASE/src/Analysis/JMEDAS/python\"))\n",
     "    \n",
     "    print \"Starting to run a series of cmsRun commands ... \"\n",
@@ -45,7 +46,7 @@
     "        else:\n",
     "            child_filenames.append(\"JECNtuple.root\")\n",
     "\n",
-    "        command = \"nohup cmsRun $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmehats_JEC.py print \" + cmd\n",
+    "        command = \"nohup cmsRun \"+ os.path.expandvars(\"$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmehats_JEC.py\") +\" print \" + cmd\n",
     "        if debug:\n",
     "            print \"The current command is\",command\n",
     "        out=open(name+\".log\",\"w\")\n",
