--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -13,225 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">> Local Products Rules ..... started\n",
-      ">> Local Products Rules ..... done\n",
-      ">> Building CMSSW version CMSSW_10_6_6 ----\n",
-      "------- copying files from src/Analysis/JMEDAS/scripts -------\n",
-      ">> copied plots11.py\n",
-      ">> copied jmehats_DBReader.py\n",
-      ">> Subsystem BigProducts built\n",
-      ">> Entering Package Analysis/JMEDAS\n",
-      ">> copied plots6.py\n",
-      ">> copied plots4.py\n",
-      ">> Creating project symlinks\n",
-      ">> copied plots9.py\n",
-      ">> copied JEC.ipynb\n",
-      ">> copied plots_pileup_1.py\n",
-      ">> copied jmedas_dijet.py\n",
-      ">> copied jmehats_JEC_makeNtuples.py\n",
-      ">> Entering Package Analysis/JetToolbox\n",
-      ">> copied plots1b.py\n",
-      ">> copied ntuple.ipynb\n",
-      ">> copied plots_jec_1.py\n",
-      ">> copied JetCorrectionDBReader_cfg.py\n",
-      ">> copied compareQuantities.C\n",
-      ">> copied plots3.py\n",
-      ">> copied plots10.py\n",
-      ">> copied plots8.py\n",
-      ">> copied run_JetMiniValidation.py\n",
-      ">> copied plots_jer_1.py\n",
-      ">> copied rootlogon.C\n",
-      ">> copied compareEfficiencies.C\n",
-      ">> copied compare2DQuantities.C\n",
-      "Entering library rule at src/Analysis/JetToolbox/plugins\n",
-      ">> copied JetCorrectionDBReader_Data_cfg.py\n",
-      "Entering library rule at Analysis/JMEDAS\n",
-      ">> copied plots4a.py\n",
-      ">> copied plot_hists.C\n",
-      ">> copied jmedas_fwlite.py\n",
-      ">> copied plots_jec_hats_1.py\n",
-      ">> copied jetPlotsExample_cfg.py\n",
-      ">> copied jmehats_JEC.py\n",
-      ">> copied plots_met.py\n",
-      ">> copied plots1c.py\n",
-      ">> copied plots_pileup_3.py\n",
-      ">> copied plots1a.py\n",
-      ">> copied plots1.py\n",
-      ">> copied plots_jec_2.py\n",
-      ">> copied compareAK4AK8.py\n",
-      ">> copied jmedas_pileupTreeMaker.py\n",
-      ">> copied pileup.ipynb\n",
-      ">> copied plots5.py\n",
-      ">> copied plots_pileup_2.py\n",
-      ">> copied rsgluon_ttbar_3TeV.txt\n",
-      ">> copied plots7.py\n",
-      ">> copied ClusterWithToolboxAndMakeHistos.py\n",
-      ">> copied README.md\n",
-      ">> copied plots_pileup_0.py\n",
-      ">> copied plots_pileup_4.py\n",
-      ">> copied ttjets_short.txt\n",
-      ">> copied plots2.py\n",
-      ">> copied jmedas_make_histograms.py\n",
-      ">> copied JetCorrectionsOnTheFlyExample.py\n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/JetUncertaintyProducer.cc \n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/jmedas_pileupNtuple.C \n",
-      ">> Compiling  /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/src/jmehats_ntuple.C \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JetToolbox/plugins/JetTester.cc \n",
-      "Entering library rule at src/Analysis/JMEDAS/plugins\n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/EtaPtMinCandViewRefSelector.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/convertPackedCandToRecoCand.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetMiniValidation.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetCorrectionsOnTheFly.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/jmehats_treeMaker.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/JetPlotsExample.cc \n",
-      ">> Compiling edm plugin /home/cms.pedrok/CMSSW_10_6_6/src/Analysis/JMEDAS/plugins/jmedas_pileupTreeMaker.cc \n",
-      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JetToolbox/plugins/AnalysisJetToolboxAuto/libAnalysisJetToolboxAuto.so\n",
-      ">> Building LCG reflex dict from header file src/Analysis/JMEDAS/src/classes.h\n",
-      ">> Compiling LCG dictionary: tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/a/AnalysisJMEDAS_xr.cc\n",
-      ">> Building shared library tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so\n",
-      "Leaving library rule at src/Analysis/JetToolbox/plugins\n",
-      "@@@@ Running edmWriteConfigs for AnalysisJetToolboxAuto\n",
-      "Copying tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so to productstore area:\n",
-      ">> Checking EDM Class Version for src/Analysis/JMEDAS/src/classes_def.xml in libAnalysisJMEDAS.so\n",
-      "--- Registered EDM Plugin: AnalysisJetToolboxAuto\n",
-      ">> Leaving Package Analysis/JetToolbox\n",
-      ">> Package Analysis/JetToolbox built\n",
-      "@@@@ ----> OK  EDM Class Version \n",
-      ">> Checking EDM Class Transients in libAnalysisJMEDAS.so\n",
-      "@@@@ ----> OK  EDM Class Transients \n",
-      "Leaving library rule at Analysis/JMEDAS\n",
-      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/plugins/AnalysisJMEDASAuto/libAnalysisJMEDASAuto.so\n",
-      "Leaving library rule at src/Analysis/JMEDAS/plugins\n",
-      "@@@@ Running edmWriteConfigs for AnalysisJMEDASAuto\n",
-      "--- Registered EDM Plugin: AnalysisJMEDASAuto\n",
-      ">> Leaving Package Analysis/JMEDAS\n",
-      ">> Package Analysis/JMEDAS built\n",
-      ">> Subsystem Analysis built\n",
-      "gmake[1]: Entering directory '/home/cms.pedrok/CMSSW_10_6_6'\n",
-      ">> Local Products Rules ..... started\n",
-      ">> Local Products Rules ..... done\n",
-      "@@@@ Refreshing Plugins:edmPluginRefresh\n",
-      ">> Creating project symlinks\n",
-      ">> Done python_symlink\n",
-      ">> Compiling python modules cfipython/slc7_amd64_gcc820\n",
-      ">> Compiling python modules python\n",
-      ">> Compiling python modules src/Analysis/JMEDAS/python\n",
-      ">> Compiling python modules src/Analysis/JetToolbox/python\n",
-      ">> Done generating edm plugin poisoned information\n",
-      ">> All python modules compiled\n",
-      ">> Plugins of all types refreshed.\n",
-      "gmake[1]: Leaving directory '/home/cms.pedrok/CMSSW_10_6_6'\n",
-      "Loaded CMSSW_10_6_6 into hats-jec!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: In non-interactive mode release checks e.g. deprecated releases, production architectures are disabled.\n",
-      "Cloning into 'Analysis/JMEDAS'...\n",
-      "Checking out files:  19% (280/1472)   \r",
-      "Checking out files:  20% (295/1472)   \r",
-      "Checking out files:  21% (310/1472)   \r",
-      "Checking out files:  22% (324/1472)   \r",
-      "Checking out files:  23% (339/1472)   \r",
-      "Checking out files:  24% (354/1472)   \r",
-      "Checking out files:  25% (368/1472)   \r",
-      "Checking out files:  26% (383/1472)   \r",
-      "Checking out files:  27% (398/1472)   \r",
-      "Checking out files:  28% (413/1472)   \r",
-      "Checking out files:  29% (427/1472)   \r",
-      "Checking out files:  30% (442/1472)   \r",
-      "Checking out files:  31% (457/1472)   \r",
-      "Checking out files:  32% (472/1472)   \r",
-      "Checking out files:  33% (486/1472)   \r",
-      "Checking out files:  34% (501/1472)   \r",
-      "Checking out files:  35% (516/1472)   \r",
-      "Checking out files:  36% (530/1472)   \r",
-      "Checking out files:  37% (545/1472)   \r",
-      "Checking out files:  38% (560/1472)   \r",
-      "Checking out files:  39% (575/1472)   \r",
-      "Checking out files:  40% (589/1472)   \r",
-      "Checking out files:  41% (604/1472)   \r",
-      "Checking out files:  42% (619/1472)   \r",
-      "Checking out files:  43% (633/1472)   \r",
-      "Checking out files:  44% (648/1472)   \r",
-      "Checking out files:  45% (663/1472)   \r",
-      "Checking out files:  46% (678/1472)   \r",
-      "Checking out files:  47% (692/1472)   \r",
-      "Checking out files:  48% (707/1472)   \r",
-      "Checking out files:  49% (722/1472)   \r",
-      "Checking out files:  50% (736/1472)   \r",
-      "Checking out files:  51% (751/1472)   \r",
-      "Checking out files:  52% (766/1472)   \r",
-      "Checking out files:  53% (781/1472)   \r",
-      "Checking out files:  54% (795/1472)   \r",
-      "Checking out files:  55% (810/1472)   \r",
-      "Checking out files:  56% (825/1472)   \r",
-      "Checking out files:  57% (840/1472)   \r",
-      "Checking out files:  58% (854/1472)   \r",
-      "Checking out files:  59% (869/1472)   \r",
-      "Checking out files:  60% (884/1472)   \r",
-      "Checking out files:  60% (890/1472)   \r",
-      "Checking out files:  61% (898/1472)   \r",
-      "Checking out files:  62% (913/1472)   \r",
-      "Checking out files:  63% (928/1472)   \r",
-      "Checking out files:  64% (943/1472)   \r",
-      "Checking out files:  65% (957/1472)   \r",
-      "Checking out files:  66% (972/1472)   \r",
-      "Checking out files:  67% (987/1472)   \r",
-      "Checking out files:  68% (1001/1472)   \r",
-      "Checking out files:  69% (1016/1472)   \r",
-      "Checking out files:  70% (1031/1472)   \r",
-      "Checking out files:  71% (1046/1472)   \r",
-      "Checking out files:  72% (1060/1472)   \r",
-      "Checking out files:  73% (1075/1472)   \r",
-      "Checking out files:  74% (1090/1472)   \r",
-      "Checking out files:  75% (1104/1472)   \r",
-      "Checking out files:  76% (1119/1472)   \r",
-      "Checking out files:  77% (1134/1472)   \r",
-      "Checking out files:  78% (1149/1472)   \r",
-      "Checking out files:  79% (1163/1472)   \r",
-      "Checking out files:  80% (1178/1472)   \r",
-      "Checking out files:  81% (1193/1472)   \r",
-      "Checking out files:  81% (1200/1472)   \r",
-      "Checking out files:  82% (1208/1472)   \r",
-      "Checking out files:  83% (1222/1472)   \r",
-      "Checking out files:  84% (1237/1472)   \r",
-      "Checking out files:  85% (1252/1472)   \r",
-      "Checking out files:  86% (1266/1472)   \r",
-      "Checking out files:  87% (1281/1472)   \r",
-      "Checking out files:  88% (1296/1472)   \r",
-      "Checking out files:  89% (1311/1472)   \r",
-      "Checking out files:  90% (1325/1472)   \r",
-      "Checking out files:  91% (1340/1472)   \r",
-      "Checking out files:  92% (1355/1472)   \r",
-      "Checking out files:  93% (1369/1472)   \r",
-      "Checking out files:  94% (1384/1472)   \r",
-      "Checking out files:  95% (1399/1472)   \r",
-      "Checking out files:  96% (1414/1472)   \r",
-      "Checking out files:  97% (1428/1472)   \r",
-      "Checking out files:  98% (1443/1472)   \r",
-      "Checking out files:  99% (1458/1472)   \r",
-      "Checking out files: 100% (1472/1472)   \r",
-      "Checking out files: 100% (1472/1472), done.\n",
-      "Cloning into 'Analysis/JetToolbox'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "#!/bin/bash\n",
     "\n",
-    "CMSSW_VER=\"CMSSW_10_6_6\"\n",
-    "KERNEL_NAME=\"hats-jec\"\n",
+    "CMSSW_VER=\"CMSSW_10_6_13\"\n",
+    "KERNEL_NAME=\"hats-jec-2020\"\n",
     "\n",
     "set -e\n",
     "# Get the CMSSW libraries (specifically ROOT)\n",
@@ -293,11 +83,10 @@
     "If successful, you should see something similar to the following:\n",
     "\n",
     "```\n",
-    "<snip>\n",
-    "Loaded CMSSW_10_6_6 into hats-jec!\n",
+    "Loaded CMSSW_10_6_13 into hats-jec-2020!\n",
     "```\n",
     "\n",
-    "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults."
+    "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults. If you've just run this notebook, you may need to refresh your Jupyter Home page before the new kernel shows up."
    ]
   },
   {
@@ -324,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
