--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -37,7 +37,7 @@
     "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
     "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2020\n",
-    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X\n",
+    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X_v3\n",
     "scram b -j 4\n",
     "cd ..\n",
     "\n",
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14+"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
