Put back the unique kernel name.

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -21,7 +21,7 @@
     "#!/bin/bash\n",
     "\n",
     "CMSSW_VER=\"CMSSW_10_6_13\"\n",
-    "KERNEL_NAME=\"hats-jec\"\n",
+    "KERNEL_NAME=\"hats-jec-2020\"\n",
     "\n",
     "set -e\n",
     "# Get the CMSSW libraries (specifically ROOT)\n",
@@ -83,7 +83,7 @@
     "If successful, you should see something similar to the following:\n",
     "\n",
     "```\n",
-    "Loaded CMSSW_10_6_13 into hats-jec!\n",
+    "Loaded CMSSW_10_6_13 into hats-jec-2020!\n",
     "```\n",
     "\n",
     "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults. If you've just run this notebook, you may need to refresh your Jupyter Home page before the new kernel shows up."
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
