--- a/notebooks/master/Jet Energy Corrections - V2.ipynb
+++ b/notebooks/master/Jet Energy Corrections - V2.ipynb
@@ -428,9 +428,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec",
+   "display_name": "hats-jec-2020",
    "language": "python",
-   "name": "hats-jec"
+   "name": "hats-jec-2020"
   },
   "language_info": {
    "codemirror_mode": {
