--- a/notebooks/master/Jet Energy Corrections.ipynb
+++ b/notebooks/master/Jet Energy Corrections.ipynb
@@ -417,9 +417,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "hats-jec",
+   "display_name": "hats-jec-2020",
    "language": "python",
-   "name": "hats-jec"
+   "name": "hats-jec-2020"
   },
   "language_info": {
    "codemirror_mode": {
