--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -13,15 +13,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/cms.kirschen/Jets1HATS2020_BLA does not exist. Create it\n",
+      ">> Local Products Rules ..... started\n",
+      ">> Local Products Rules ..... done\n",
+      ">> Building CMSSW version CMSSW_10_6_13 ----\n",
+      "------- copying files from src/Analysis/JMEDAS/scripts -------\n",
+      ">> copied plots11.py\n",
+      ">> copied jmehats_DBReader.py\n",
+      ">> Subsystem BigProducts built\n",
+      ">> copied plots6.py\n",
+      ">> Entering Package Analysis/JMEDAS\n",
+      ">> copied plots4.py\n",
+      ">> Creating project symlinks\n",
+      ">> copied plots9.py\n",
+      ">> copied JEC.ipynb\n",
+      ">> copied plots_pileup_1.py\n",
+      ">> copied jmedas_dijet.py\n",
+      ">> copied jmehats_JEC_makeNtuples.py\n",
+      ">> Entering Package Analysis/JetToolbox\n",
+      ">> copied plots1b.py\n",
+      ">> copied ntuple.ipynb\n",
+      ">> copied plots_jec_1.py\n",
+      ">> copied JetCorrectionDBReader_cfg.py\n",
+      ">> copied compareQuantities.C\n",
+      ">> copied plots3.py\n",
+      ">> copied plots10.py\n",
+      ">> copied plots8.py\n",
+      ">> copied run_JetMiniValidation.py\n",
+      ">> copied plots_jer_1.py\n",
+      ">> copied rootlogon.C\n",
+      ">> copied compareEfficiencies.C\n",
+      ">> copied compare2DQuantities.C\n",
+      ">> copied JetCorrectionDBReader_Data_cfg.py\n",
+      ">> copied plots4a.py\n",
+      ">> copied plot_hists.C\n",
+      ">> copied jmedas_fwlite.py\n",
+      ">> copied plots_jec_hats_1.py\n",
+      "Entering library rule at src/Analysis/JetToolbox/plugins\n",
+      "Entering library rule at Analysis/JMEDAS\n",
+      ">> copied jetPlotsExample_cfg.py\n",
+      ">> copied jmehats_JEC.py\n",
+      ">> copied plots_met.py\n",
+      ">> copied plots1c.py\n",
+      ">> copied plots_pileup_3.py\n",
+      ">> copied plots1a.py\n",
+      ">> copied plots1.py\n",
+      ">> copied plots_jec_2.py\n",
+      ">> copied compareAK4AK8.py\n",
+      ">> copied jmedas_pileupTreeMaker.py\n",
+      ">> copied pileup.ipynb\n",
+      ">> copied plots5.py\n",
+      ">> copied plots_pileup_2.py\n",
+      ">> copied rsgluon_ttbar_3TeV.txt\n",
+      ">> copied plots7.py\n",
+      ">> copied ClusterWithToolboxAndMakeHistos.py\n",
+      ">> copied README.md\n",
+      ">> copied plots_pileup_0.py\n",
+      ">> copied plots_pileup_4.py\n",
+      ">> copied ttjets_short.txt\n",
+      ">> copied plots2.py\n",
+      ">> copied jmedas_make_histograms.py\n",
+      ">> copied JetCorrectionsOnTheFlyExample.py\n",
+      ">> Compiling  /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/src/JetUncertaintyProducer.cc \n",
+      ">> Compiling  /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/src/jmedas_pileupNtuple.C \n",
+      ">> Compiling  /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/src/jmehats_ntuple.C \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JetToolbox/plugins/JetTester.cc \n",
+      "Entering library rule at src/Analysis/JMEDAS/plugins\n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/EtaPtMinCandViewRefSelector.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/convertPackedCandToRecoCand.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/JetMiniValidation.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/JetCorrectionsOnTheFly.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/jmehats_treeMaker.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/JetPlotsExample.cc \n",
+      ">> Compiling edm plugin /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src/Analysis/JMEDAS/plugins/jmedas_pileupTreeMaker.cc \n",
+      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JetToolbox/plugins/AnalysisJetToolboxAuto/libAnalysisJetToolboxAuto.so\n",
+      "Leaving library rule at src/Analysis/JetToolbox/plugins\n",
+      "@@@@ Running edmWriteConfigs for AnalysisJetToolboxAuto\n",
+      "--- Registered EDM Plugin: AnalysisJetToolboxAuto\n",
+      ">> Leaving Package Analysis/JetToolbox\n",
+      ">> Package Analysis/JetToolbox built\n",
+      ">> Building LCG reflex dict from header file src/Analysis/JMEDAS/src/classes.h\n",
+      ">> Compiling LCG dictionary: tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/a/AnalysisJMEDAS_xr.cc\n",
+      ">> Building shared library tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so\n",
+      "Copying tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/src/AnalysisJMEDAS/libAnalysisJMEDAS.so to productstore area:\n",
+      ">> Checking EDM Class Version for src/Analysis/JMEDAS/src/classes_def.xml in libAnalysisJMEDAS.so\n",
+      "@@@@ ----> OK  EDM Class Version \n",
+      ">> Checking EDM Class Transients in libAnalysisJMEDAS.so\n",
+      "@@@@ ----> OK  EDM Class Transients \n",
+      "Leaving library rule at Analysis/JMEDAS\n",
+      ">> Building edm plugin tmp/slc7_amd64_gcc820/src/Analysis/JMEDAS/plugins/AnalysisJMEDASAuto/libAnalysisJMEDASAuto.so\n",
+      "Leaving library rule at src/Analysis/JMEDAS/plugins\n",
+      "@@@@ Running edmWriteConfigs for AnalysisJMEDASAuto\n",
+      "--- Registered EDM Plugin: AnalysisJMEDASAuto\n",
+      ">> Leaving Package Analysis/JMEDAS\n",
+      ">> Package Analysis/JMEDAS built\n",
+      ">> Subsystem Analysis built\n",
+      "gmake[1]: Entering directory '/home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13'\n",
+      ">> Local Products Rules ..... started\n",
+      ">> Local Products Rules ..... done\n",
+      "@@@@ Refreshing Plugins:edmPluginRefresh\n",
+      ">> Creating project symlinks\n",
+      ">> Done python_symlink\n",
+      ">> Compiling python modules cfipython/slc7_amd64_gcc820\n",
+      ">> Compiling python modules python\n",
+      ">> Compiling python modules src/Analysis/JMEDAS/python\n",
+      ">> Compiling python modules src/Analysis/JetToolbox/python\n",
+      ">> Done generating edm plugin poisoned information\n",
+      ">> All python modules compiled\n",
+      ">> Plugins of all types refreshed.\n",
+      "gmake[1]: Leaving directory '/home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13'\n",
+      "Loaded CMSSW_10_6_13 into hats-jec-2020!\n",
+      "Checkout out setup to /home/cms.kirschen/Jets1HATS2020_BLA/CMSSW_10_6_13/src\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: In non-interactive mode release checks e.g. deprecated releases, production architectures are disabled.\n",
+      "Cloning into 'Analysis/JMEDAS'...\n",
+      "Checking out files:   8% (131/1492)   \r",
+      "Checking out files:   9% (135/1492)   \r",
+      "Checking out files:  10% (150/1492)   \r",
+      "Checking out files:  11% (165/1492)   \r",
+      "Checking out files:  12% (180/1492)   \r",
+      "Checking out files:  13% (194/1492)   \r",
+      "Checking out files:  14% (209/1492)   \r",
+      "Checking out files:  15% (224/1492)   \r",
+      "Checking out files:  16% (239/1492)   \r",
+      "Checking out files:  17% (254/1492)   \r",
+      "Checking out files:  17% (255/1492)   \r",
+      "Checking out files:  18% (269/1492)   \r",
+      "Checking out files:  19% (284/1492)   \r",
+      "Checking out files:  20% (299/1492)   \r",
+      "Checking out files:  21% (314/1492)   \r",
+      "Checking out files:  22% (329/1492)   \r",
+      "Checking out files:  23% (344/1492)   \r",
+      "Checking out files:  24% (359/1492)   \r",
+      "Checking out files:  25% (373/1492)   \r",
+      "Checking out files:  26% (388/1492)   \r",
+      "Checking out files:  27% (403/1492)   \r",
+      "Checking out files:  28% (418/1492)   \r",
+      "Checking out files:  29% (433/1492)   \r",
+      "Checking out files:  30% (448/1492)   \r",
+      "Checking out files:  31% (463/1492)   \r",
+      "Checking out files:  32% (478/1492)   \r",
+      "Checking out files:  33% (493/1492)   \r",
+      "Checking out files:  34% (508/1492)   \r",
+      "Checking out files:  35% (523/1492)   \r",
+      "Checking out files:  36% (538/1492)   \r",
+      "Checking out files:  37% (553/1492)   \r",
+      "Checking out files:  38% (567/1492)   \r",
+      "Checking out files:  39% (582/1492)   \r",
+      "Checking out files:  40% (597/1492)   \r",
+      "Checking out files:  41% (612/1492)   \r",
+      "Checking out files:  41% (613/1492)   \r",
+      "Checking out files:  42% (627/1492)   \r",
+      "Checking out files:  43% (642/1492)   \r",
+      "Checking out files:  44% (657/1492)   \r",
+      "Checking out files:  45% (672/1492)   \r",
+      "Checking out files:  46% (687/1492)   \r",
+      "Checking out files:  47% (702/1492)   \r",
+      "Checking out files:  48% (717/1492)   \r",
+      "Checking out files:  48% (725/1492)   \r",
+      "Checking out files:  49% (732/1492)   \r",
+      "Checking out files:  50% (746/1492)   \r",
+      "Checking out files:  51% (761/1492)   \r",
+      "Checking out files:  52% (776/1492)   \r",
+      "Checking out files:  53% (791/1492)   \r",
+      "Checking out files:  54% (806/1492)   \r",
+      "Checking out files:  55% (821/1492)   \r",
+      "Checking out files:  55% (831/1492)   \r",
+      "Checking out files:  56% (836/1492)   \r",
+      "Checking out files:  57% (851/1492)   \r",
+      "Checking out files:  58% (866/1492)   \r",
+      "Checking out files:  59% (881/1492)   \r",
+      "Checking out files:  60% (896/1492)   \r",
+      "Checking out files:  61% (911/1492)   \r",
+      "Checking out files:  62% (926/1492)   \r",
+      "Checking out files:  63% (940/1492)   \r",
+      "Checking out files:  64% (955/1492)   \r",
+      "Checking out files:  64% (956/1492)   \r",
+      "Checking out files:  65% (970/1492)   \r",
+      "Checking out files:  66% (985/1492)   \r",
+      "Checking out files:  67% (1000/1492)   \r",
+      "Checking out files:  68% (1015/1492)   \r",
+      "Checking out files:  69% (1030/1492)   \r",
+      "Checking out files:  70% (1045/1492)   \r",
+      "Checking out files:  71% (1060/1492)   \r",
+      "Checking out files:  72% (1075/1492)   \r",
+      "Checking out files:  73% (1090/1492)   \r",
+      "Checking out files:  73% (1091/1492)   \r",
+      "Checking out files:  74% (1105/1492)   \r",
+      "Checking out files:  75% (1119/1492)   \r",
+      "Checking out files:  76% (1134/1492)   \r",
+      "Checking out files:  77% (1149/1492)   \r",
+      "Checking out files:  78% (1164/1492)   \r",
+      "Checking out files:  79% (1179/1492)   \r",
+      "Checking out files:  80% (1194/1492)   \r",
+      "Checking out files:  81% (1209/1492)   \r",
+      "Checking out files:  82% (1224/1492)   \r",
+      "Checking out files:  83% (1239/1492)   \r",
+      "Checking out files:  84% (1254/1492)   \r",
+      "Checking out files:  85% (1269/1492)   \r",
+      "Checking out files:  86% (1284/1492)   \r",
+      "Checking out files:  86% (1289/1492)   \r",
+      "Checking out files:  87% (1299/1492)   \r",
+      "Checking out files:  88% (1313/1492)   \r",
+      "Checking out files:  89% (1328/1492)   \r",
+      "Checking out files:  90% (1343/1492)   \r",
+      "Checking out files:  91% (1358/1492)   \r",
+      "Checking out files:  92% (1373/1492)   \r",
+      "Checking out files:  93% (1388/1492)   \r",
+      "Checking out files:  94% (1403/1492)   \r",
+      "Checking out files:  95% (1418/1492)   \r",
+      "Checking out files:  96% (1433/1492)   \r",
+      "Checking out files:  97% (1448/1492)   \r",
+      "Checking out files:  98% (1463/1492)   \r",
+      "Checking out files:  99% (1478/1492)   \r",
+      "Checking out files: 100% (1492/1492)   \r",
+      "Checking out files: 100% (1492/1492), done.\n",
+      "Cloning into 'Analysis/JetToolbox'...\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "#!/bin/bash\n",
     "\n",
     "CMSSW_VER=\"CMSSW_10_6_13\"\n",
     "KERNEL_NAME=\"hats-jec-2020\"\n",
+    "DIRFORCHECKOUT=\"Jets1HATS2020\"\n",
     "\n",
     "set -e\n",
     "# Get the CMSSW libraries (specifically ROOT)\n",
@@ -31,13 +260,17 @@
     "if [ -d cmssw-env ]; then\n",
     "    rm -rf cmssw-env\n",
     "fi\n",
-    "cd $HOME\n",
-    "scramv1 project -n \"${CMSSW_VER}_Jets1\" $CMSSW_VER \n",
+    "if [ ! -f \"$HOME/$DIRFORCHECKOUT\" ]; then\n",
+    "    echo \"$HOME/$DIRFORCHECKOUT does not exist. Create it\"\n",
+    "    mkdir \"$HOME/$DIRFORCHECKOUT\"\n",
+    "fi\n",
+    "cd \"$HOME/$DIRFORCHECKOUT\"\n",
+    "scramv1 project -n \"${CMSSW_VER}\" $CMSSW_VER \n",
     "\n",
-    "cd \"${CMSSW_VER}_Jets1/src\"\n",
+    "cd \"${CMSSW_VER}/src\"\n",
     "eval `scramv1 runtime -sh`\n",
     "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2020\n",
-    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X_v3\n",
+    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X\n",
     "scram b -j 4\n",
     "cd ..\n",
     "\n",
@@ -70,7 +303,8 @@
     "EOF\n",
     "\n",
     "# Report OK\n",
-    "echo \"Loaded $CMSSW_VERSION into $KERNEL_NAME!\""
+    "echo \"Loaded $CMSSW_VERSION into $KERNEL_NAME!\"\n",
+    "echo \"Checkout out setup to $HOME/$DIRFORCHECKOUT/${CMSSW_VER}/src\""
    ]
   },
   {
@@ -84,6 +318,7 @@
     "\n",
     "```\n",
     "Loaded CMSSW_10_6_13 into hats-jec-2020!\n",
+    "Checked out setup to /home/cms.kirschen/Jets1HATS2020/CMSSW_10_6_13/src\n",
     "```\n",
     "\n",
     "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults. If you've just run this notebook, you may need to refresh your Jupyter Home page before the new kernel shows up."
@@ -113,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14+"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
