--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "# Report OK\n",
     "echo \"Loaded $CMSSW_VERSION into $KERNEL_NAME!\"\n",
-    "echo \"Checkout out setup to $HOME/$DIRFORCHECKOUT/${CMSSW_VER}/src\""
+    "echo \"Checked out setup to $HOME/$DIRFORCHECKOUT/${CMSSW_VER}/src\""
    ]
   },
   {
