revert to jet-toolbox tag instead of plain 102-branch

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -42,7 +42,7 @@
     "cd \"${CMSSW_VER}/src\"\n",
     "eval `scramv1 runtime -sh`\n",
     "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2020\n",
-    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X\n",
+    "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X_v3\n",
     "scram b -j 4\n",
     "cd ..\n",
     "\n",
