check for directory named  in home, not a file

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -32,7 +32,7 @@
     "if [ -d cmssw-env ]; then\n",
     "    rm -rf cmssw-env\n",
     "fi\n",
-    "if [ ! -f \"$HOME/$DIRFORCHECKOUT\" ]; then\n",
+    "if [ ! -d \"$HOME/$DIRFORCHECKOUT\" ]; then\n",
     "    echo \"$HOME/$DIRFORCHECKOUT does not exist. Create it\"\n",
     "    mkdir \"$HOME/$DIRFORCHECKOUT\"\n",
     "fi\n",
