fix chs->CHS jetType name

--- a/notebooks/master/Jet Energy Corrections - V2.ipynb
+++ b/notebooks/master/Jet Energy Corrections - V2.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Histogram settings\n",
     "alg_size = algsize\n",
-    "jetTypes = OrderedDict([(\"PF\" , r.kBlack),(\"PFchs\" , r.kRed),(\"PFPuppi\" , r.kGreen)])\n",
+    "jetTypes = OrderedDict([(\"PF\" , r.kBlack),(\"PFCHS\" , r.kRed),(\"PFPuppi\" , r.kGreen)])\n",
     "corrections = OrderedDict([(\"Uncorrected\" , r.kDotted),(\"L1\" , r.kDashed),(\"L1L2L3\" , r.kSolid)])\n",
     "hsettingsTMP = {'response' : (1,80,0,2),\n",
     "\t\t\t    'pt'       : (2,200,0,1000),\n",
