Add The JEC Game exercise to the HATS folder and renumber the other exercises. Remove the outputs from the exercises and make some other minor modifications.

--- a/notebooks/master/Jet Energy Corrections - V2.ipynb
+++ b/notebooks/master/Jet Energy Corrections - V2.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Histogram settings\n",
     "alg_size = algsize\n",
-    "jetTypes = OrderedDict([(\"PF\" , r.kBlack),(\"PFCHS\" , r.kRed),(\"PFPuppi\" , r.kGreen)])\n",
+    "jetTypes = OrderedDict([(\"PF\" , r.kBlack),(\"PFCHS\" , r.kRed),(\"PFPUPPI\" , r.kGreen)])\n",
     "corrections = OrderedDict([(\"Uncorrected\" , r.kDotted),(\"L1\" , r.kDashed),(\"L1L2L3\" , r.kSolid)])\n",
     "hsettingsTMP = {'response' : (1,80,0,2),\n",
     "\t\t\t    'pt'       : (2,200,0,1000),\n",
@@ -124,7 +124,7 @@
     "\n",
     "        tree = f.Get(alg_size+jt+\"L1L2L3/t\")\n",
     "\n",
-    "        for cor in corrections:\n",
+    "        for icor, cor in enumerate(corrections):\n",
     "            # Create the histograms\n",
     "            hname = \"h\"+alg_size+jt+\"_\"+cor+\"_\"+hs\n",
     "\n",
@@ -167,21 +167,21 @@
     "                fname = \"f\"+alg_size+jt+\"_\"+cor+\"_\"+hs\n",
     "                fits[fname] = r.TF1(fname,\"gaus\",histograms[hname].GetMean()-(nsigma*histograms[hname].GetRMS()),histograms[hname].GetMean()+(nsigma*histograms[hname].GetRMS()))\n",
     "                fits[fname].SetParNames(\"N\",\"#mu\",\"#sigma\")\n",
-    "                fits[fname].SetLineColor(jetTypes[jt])\n",
+    "                fits[fname].SetLineColor(jetTypes[jt]-icor)\n",
     "                fits[fname].SetLineStyle(corrections[cor])\n",
     "                histograms[hname].Fit(fits[fname],\"RQ0\")\n",
     "\n",
     "                # Create lines based on the fits\n",
     "                lname = \"l\"+alg_size+jt+\"_\"+cor+\"_\"+hs\n",
     "                lines[lname] = r.TLine(fits[fname].GetParameter(1),settings[\"response\"][3],fits[fname].GetParameter(1),settings[\"response\"][4])\n",
-    "                lines[lname].SetLineColor(jetTypes[jt])\n",
+    "                lines[lname].SetLineColor(jetTypes[jt]-icor)\n",
     "                lines[lname].SetLineStyle(corrections[cor])\n",
     "\n",
     "            # Add entries to the legend\n",
     "            legends[legname].AddEntry(histograms[hname],str(alg_size+jt+cor).replace(\"Uncorrected\",\"\"),\"l\")\n",
     "\n",
     "            c.cd(hsettingsTMP[hs][0])\n",
-    "            tdrDraw(histograms[hname],\"HIST\",r.kNone,jetTypes[jt],corrections[cor],-1,0,0)\n",
+    "            tdrDraw(histograms[hname],\"HIST\",r.kNone,jetTypes[jt]-icor,corrections[cor],-1,0,0)\n",
     "\n",
     "            if hs == \"response\":\n",
     "                # Draw the fits\n",
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Question 7: Is the mean value of the jet pT distribution closer or further from unity? Is the most provable value (peak) of the jet pT distribution closer or further from unity? Thinking about what these corrections are doing, does this seem right to you?</font>\n",
+    "<font color='red'>Question 7: Is the mean value of the jet pT response closer or further from unity? Is the most provable value (peak) of the jet pT response closer or further from unity? Thinking about what these corrections are doing, does this seem right to you?</font>\n",
     "\n",
     "<font color='red'>Question 8: Should the $\\eta$ and $\\phi$ distributions change?</font><details>\n",
     "<summary><font color='blue'>Show answer...</font></summary>\n",
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cmsRun jmehats_DBReader.py"
+    "cmsRun $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmehats_DBReader.py"
    ]
   },
   {
