--- a/notebooks/master/The JEC Game.ipynb
+++ b/notebooks/master/The JEC Game.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be making use of the JEC files in [../data/JECs/Spring16_25nsV5_MC/](../data/JECs/Spring16_25nsV5_MC/)\n",
+    "We will be making use of the JEC files in [$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/]($CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/)\n",
     "\n",
     "*Note*: You can us ```%alias``` to see a list of built-in Jupyter \"magic\" commands "
    ]
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat ../data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L1FastJet_AK4PFchs.txt"
+    "%cat $CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L1FastJet_AK4PFchs.txt"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat ../data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L2Relative_AK4PFchs.txt"
+    "%cat $CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L2Relative_AK4PFchs.txt"
    ]
   },
   {
