Update branch names for sep2020 DAS

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "CMSSW_VER=\"CMSSW_10_6_13\"\n",
     "KERNEL_NAME=\"hats-jec-2020\"\n",
-    "DIRFORCHECKOUT=\"Jets2HATS2020\"\n",
+    "DIRFORCHECKOUT=\"JetsDASSep2020\"\n",
     "\n",
     "set -e\n",
     "# Get the CMSSW libraries (specifically ROOT)\n",
@@ -41,7 +41,7 @@
     "\n",
     "cd \"${CMSSW_VER}/src\"\n",
     "eval `scramv1 runtime -sh`\n",
-    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b HATS2020\n",
+    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b DASSep2020\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_102X_v3\n",
     "scram b -j 4\n",
     "cd ..\n",
@@ -94,7 +94,7 @@
     "\n",
     "```\n",
     "Loaded CMSSW_10_6_13 into hats-jec-2020!\n",
-    "Checked out setup to YOURHOME/Jets2HATS2020/CMSSW_10_6_13/src\n",
+    "Checked out setup to YOURHOME/JetsDASSep2020/CMSSW_10_6_13/src\n",
     "```\n",
     "\n",
     "The new kernel you just made will then show up in the various Jupyter dropdowns, adding it alongside the stock defaults. If you've just run this notebook, you may need to refresh your Jupyter Home page before the new kernel shows up."
