adding changes to SWAN and fixing README

--- a/notebooks/Exercise 5 - Jet Substructure.ipynb
+++ b/notebooks/Exercise 5 - Jet Substructure.ipynb
@@ -86,11 +86,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
     "import os\n",
-    "import sys\n",
     "\n",
-    "##### REMEMBER TO MANUALLY COPY THE PROXY TO THE TMP FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '/eos/home-a/algomez/tmp/x509up_u15148'\n",
+    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
+    "os.environ['X509_USER_PROXY'] = '/eos/home-X/Y/tmp/x509up_u0000'\n",
     "if os.path.isfile(os.environ['X509_USER_PROXY']): pass\n",
     "else: print(\"os.environ['X509_USER_PROXY'] \",os.environ['X509_USER_PROXY'])\n",
     "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
