--- a/notebooks/HATS_BONUS_3 - JECNtuple Setup.ipynb
+++ b/notebooks/HATS_BONUS_3 - JECNtuple Setup.ipynb
@@ -71,6 +71,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
+    "import os\n",
+    "\n",
+    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
+    "os.environ['X509_USER_PROXY'] = '/eos/home-X/Y/tmp/x509up_u0000'\n",
+    "if os.path.isfile(os.environ['X509_USER_PROXY']): pass\n",
+    "else: print(\"os.environ['X509_USER_PROXY'] \",os.environ['X509_USER_PROXY'])\n",
+    "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
+    "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
