--- a/notebooks/master/Jet Substructure.ipynb
+++ b/notebooks/master/Jet Substructure.ipynb
@@ -38,7 +38,7 @@
     "import os\n",
     "\n",
     "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '{}/x509up_u5882'.format(os.environ[\"HOME\"])\n",
+    "os.environ['X509_USER_PROXY'] = '{}/x509up_u0000'.format(os.environ[\"HOME\"])\n",
     "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
     "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
     "else: \n",
@@ -242,8 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "c, l, hists = compareHistogram('tau21AK8')\n",
-    "#c.Draw()\n"
+    "compareHistogram('tau21AK8')"
    ]
   },
   {
