add extra symbolic link for plots/files used in notebooks; change kernel for first notebooks to hats-jec, fix path to plots

--- a/notebooks/master/Jet Resolution.ipynb
+++ b/notebooks/master/Jet Resolution.ipynb
@@ -231,9 +231,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec-2020",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "hats-jec-2020"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
