--- a/notebooks/master/Jet Types and Algorithms.ipynb
+++ b/notebooks/master/Jet Types and Algorithms.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "\n",
     "\n",
-    "<img src=\"files/JHEP04_2008_063.jpg\" alt=\"\" style=\"width: 600px;\"/>\n",
+    "<img src=\"../files/JHEP04_2008_063.jpg\" alt=\"\" style=\"width: 600px;\"/>\n",
     "Figure: Comparison of jet areas for four different jet algorithms, from \"The anti-kt Clustering Algorithm\" by Cacciari, Salam, and Soyez [JHEP04, 063 (2008), arXiv:0802.1189].\n",
     "\n",
     "Some excellent references about jet algorithms can be found here:\n",
@@ -211,18 +211,6 @@
     "l.AddEntry(h_areaAK8, \"AK8\", \"l\")\n",
     "l.Draw()\n",
     "\n",
-    "line_ak4 = ROOT.TLine(math.pi * 0.4**2, 0., math.pi * 0.4**2, frame.GetMaximum())\n",
-    "line_ak4.SetLineWidth(2)\n",
-    "line_ak4.SetLineStyle(2)\n",
-    "line_ak4.SetLineColor(ROOT.kGray)\n",
-    "line_ak4.Draw()\n",
-    "\n",
-    "line_ak8 = ROOT.TLine(math.pi * 0.8**2, 0., math.pi * 0.8**2, frame.GetMaximum())\n",
-    "line_ak8.SetLineWidth(2)\n",
-    "line_ak8.SetLineStyle(2)\n",
-    "line_ak8.SetLineColor(ROOT.kGray)\n",
-    "line_ak8.Draw()\n",
-    "\n",
     "c_area.Draw()"
    ]
   },
@@ -238,9 +226,22 @@
     "</summary>\n",
     "The area plot should look like this:\n",
     "\n",
-    "<img src=\"files/jet_areas.png\" width=400px/>\n",
+    "<img src=\"../files/jet_areas.png\" width=400px/>\n",
     "\n",
     "The histograms indeed peak at the expected value of $\\pi R^2$. \n",
+    "```\n",
+    "line_ak4 = ROOT.TLine(math.pi * 0.4**2, 0., math.pi * 0.4**2, frame.GetMaximum())\n",
+    "line_ak4.SetLineWidth(2)\n",
+    "line_ak4.SetLineStyle(2)\n",
+    "line_ak4.SetLineColor(ROOT.kGray)\n",
+    "line_ak4.Draw()\n",
+    "\n",
+    "line_ak8 = ROOT.TLine(math.pi * 0.8**2, 0., math.pi * 0.8**2, frame.GetMaximum())\n",
+    "line_ak8.SetLineWidth(2)\n",
+    "line_ak8.SetLineStyle(2)\n",
+    "line_ak8.SetLineColor(ROOT.kGray)\n",
+    "line_ak8.Draw()\n",
+    "```\n",
     "</details>\n"
    ]
   },
@@ -338,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec-2020",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "hats-jec-2020"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
