Ask the students to look at the input files.

--- a/notebooks/master/Pileup Reweighting.ipynb
+++ b/notebooks/master/Pileup Reweighting.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While you're waiting for pileupCorr.py to finish, you might want to take a look at the input files to see what information they contain and how they are formatted."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
