Add a link to the pileup reweighting twiki.

--- a/notebooks/master/Pileup Reweighting.ipynb
+++ b/notebooks/master/Pileup Reweighting.ipynb
@@ -81,6 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More information about pileup reweighting and the centrally available utilities can be found [here](https://twiki.cern.ch/twiki/bin/viewauth/CMS/PileupJSONFileforData)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
