clarify that there is only one default JetID by now (what used to be "tight JetID")

--- a/notebooks/master/Jet Types and Algorithms.ipynb
+++ b/notebooks/master/Jet Types and Algorithms.ipynb
@@ -255,10 +255,10 @@
     "\n",
     "https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetID\n",
     "\n",
-    "The JetMET POG recommends the \"loose\" jet ID for most physics analysis in CMS. Some important observations from the above twiki:\n",
+    "The JetMET POG recommends a single jet ID for most physics analysess in CMS, which corresponds to what used to be called the tight Jet ID. Some important observations from the above twiki:\n",
     "\n",
     "- Jet ID is defined for uncorrected jets only. Never apply jet ID on corrected jets. This means that in your analysis you should apply jet ID first, and then apply JECs on those jets that pass jet ID.\n",
-    "- Loose jet Id is fully efficient (>99.9%) for real, high-$p_{\\mathrm{T}}$ jets used in most physics analysis. Its background rejection power is similarly high.\n",
+    "- Jet ID is fully efficient (>99%) for real, high-$p_{\\mathrm{T}}$ jets used in most physics analysis. Its background rejection power is similarly high.\n",
     "\n",
     "## Applying Jet ID\n",
     "\n",
